apps/gateway/kustomize/overlays/aws/goerli-nightly/resource_override.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-gateway
spec:
  template:
    spec:
      containers:
        - name: app-gateway
          image: onthertech/tokamak.gateway:nightly
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 0.25
              memory: 0.25Gi
